--- a/part-1/css/styles.css
+++ b/part-1/css/styles.css
@@ -20,6 +20,7 @@ body {
   margin: auto;
   border: 3px solid black;
   background-color: #eee;
+  position: relative;
 }
 
 .box {
@@ -27,22 +28,39 @@ body {
   height: 200px;
 }
 
+.blue {
+  background-color: lightblue;
+  top: 250px;
+  left: 200px;
+  position: relative;
+  z-index: 1500;
+}
+
 .red {
   background-color: pink;
+  position: absolute;
+  top: 50px;
+  right: 100px;
 }
 
 .green {
   background-color: lightgreen;
-}
-
-.blue {
-  background-color: lightblue;
+  position: absolute;
+  bottom: 50px;
+  right: 50%;
 }
 
 .orange {
   background-color: orange;
+  position: absolute;
+  top: 75%;
+  left: 25%;
 }
 
 .yellow {
   background-color: yellow;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
